<resources>
    <string name="app_name">QuantiTanti</string>
    <string name="car_transport"><![CDATA[Car &\ntransport]]></string>
    <string name="clothes_shoes"><![CDATA[Clothes\n& shoes]]></string>
    <string name="food_drinks"><![CDATA[Food\n& drinks]]></string>
    <string name="utilities">Utilities</string>
    <string name="groceries">Groceries</string>
    <string name="education">Education</string>
    <string name="sport_activities">Sport\nactivities</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="other_stuff">Other\nstuff</string>
    <string name="pick_your_cost_category">Pick your cost category:</string>

    <!--    pref curreny labels.-->
    <string name="pref_currency_label_kuna">HRK</string>
    <string name="pref_currency_label_euro">EUR</string>
    <string name="pref_currency_label_pound">GBP</string>
    <string name="pref_currency_label_dollar">USD</string>

    <!--    pref curreny values.-->
    <string name="pref_currency_value_kuna">HRK</string>
    <string name="pref_currency_value_euro">EUR</string>
    <string name="pref_currency_value_pound">GBP</string>
    <string name="pref_currency_value_dollar">USD</string>

    <!-- Key name for currency preference in SharedPreferences -->
    <string name="pref_currency_key" translatable="false">currency</string>

    <!-- Label for the currency preference -->
    <string name="pref_currency_label">Change your currency:</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure">Are you sure you want to delete this cost?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pick_a_tag_optional">Pick a tag (optional)</string>
    <string name="knS">kn</string>
    <string name="euroS">€</string>
    <string name="poundS">£</string>
    <string name="dollarS">$</string>
    <string name="search">Search</string>
    <string name="currency">Currency</string>
    <string name="filter">FILTER BY</string>
    <string name="tags">TAGS</string>
    <string name="cost_value">COST VALUE</string>
    <string name="categories">CATEGORIES</string>
    <string name="legal">Legal</string>
    <string name="take_a_pic_optional">Take a pic (optional)</string>



</resources>
